# casino-odds-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cpp.yml
include/core/: rng.hpp
include/db/: sqlite.hpp
include/games/: dice.hpp
scripts/: plot_ev.py
src/: CMakeLists.txt
src/cli/: main.cpp
src/db/: sqlite.cpp
tests/: CMakeLists.txt  test_dice.cpp  tests_basic.cpp
